# lightrag-memory-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/lightrag_memory/: __init__.py  __main__.py  client.py  server.py
