[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightrag-memory-mcp"
version = "1.0.0"
description = "MCP server for LightRAG — long-term memory for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Sergei Stekh", email = "sergei.stekh@gmail.com"}]
requires-python = ">=3.10"
keywords = ["mcp", "lightrag", "memory", "ai", "agents", "rag"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
lightrag-memory = "lightrag_memory.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
